Modified About page
Done changes

--- a/index.html
+++ b/index.html
@@ -40,23 +40,14 @@
 </div><!--/.secondary-->
 
 <div class="primary col">
-    <h3>I like to work on</h3>
-    <img class="feat-img" src="img/webtech.png" alt="Web Technologies">
-    <p>Internet programming is a very dynamic field that is constantly being enhanced and changed.
-        Being a fanatic for web technologies, I have been updating my skills with the latest web development tools such as Angular 2.
-
-        </p>
-    <p> Enthusiastic to learn any new technology that will help to advance in my career.
-
+    <h3>Visit my resume page here </h3>
+    <a href="https://mmrp5.github.io/MadhanMohan">Resume</a>
     </p>
 </div><!--/.primary-->
 
 <div class="tertiary col">
-    <h3>And</h3>
-    <img class="feat-img" src="img/ms.jpg" alt="Microsoft Technologies">
-    <p>Started career as a .Net developer in 2007. Extensively used Microsoft's C# .net for windows
-        forms applications and ASP.net for MVC applications. Have used frameworks 3.0, 4.0 and 4.5</p>
-    <p>Started developing applications by combining Angular 2 with C# and I am loving it.</p>
+    <h3>My other contributions</h3>
+
 </div><!--/.tertiary-->
 
 </div>
