--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 </div><!--/.primary-->
 
 <div class="tertiary col">
-    <h3>My other contributions</h3>
+    <h3>My other contributions to github</h3>
 
 </div><!--/.tertiary-->
 
