--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container clearfix">
     <h1 class="name"><a href="#">Madhan Mohan</a></h1>
     <ul class="main-nav">
-        <li><a href="#">About</a></li>
+        <li><a href="#">Home</a></li>
         <li><a href="https://mmrp5.github.io/MadhanMohan">Resume</a></li>
         <li><a href="#">Contact</a></li>
     </ul>
