--- a/index.html
+++ b/index.html
@@ -11,42 +11,66 @@
 
 <header class="main-header">
     <div class="container clearfix">
-    <h1 class="name"><a href="#">Madhan Mohan</a></h1>
-    <ul class="main-nav">
-        <li><a href="#">Home</a></li>
-        <li><a href="https://mmrp5.github.io/MadhanMohan">Resume</a></li>
-        <li><a href="#">Contact</a></li>
-    </ul>
+        <h1 class="name"><a href="#">Madhan Mohan</a></h1>
+        <ul class="main-nav">
+            <li><a href="#">Home</a></li>
+            <li><a href="https://mmrp5.github.io/MadhanMohan">Resume</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
     </div>
 </header><!--/.main-header-->
 
 <div class="banner">
     <img class="logo" src="img/MadhanMohan.jpg" alt="Author Image">
 
-    <h1 class="headline">Full Stack Developer</h1>
+    <h1 class="headline">Welcome To My Page</h1>
     <span class="tagline">Hands on experience in Microsoft .Net &amp; Web development technologies.</span>
 </div><!--/.banner-->
 <div class="container clearfix">
-<div class="secondary col">
-    <h3>Welcome!</h3>
-    <p>Thank you for visiting my page.</p>
-    <p>Are you searching for a software engineer with a proven ability to develop
-        high-performance applications and technical innovations? If so, please consider my
-        profile.</p>
-    <p>Since 2007, I have served as a software engineer for many companies, where I have been repeatedly recognized for developing innovative solutions for multimillion-dollar, globally deployed software and systems. I am responsible for full lifecycle development of next-generation software, from initial requirement
-        gathering to design, coding, testing, documentation and implementation</p>
-</div><!--/.secondary-->
+    <div class="secondary col">
+        <h3>Welcome!</h3>
+        <p>Thank you for visiting my page.</p>
+        <p>Are you searching for a software engineer with a proven ability to develop
+            high-performance applications and technical innovations? If so, please consider my
+            profile.</p>
+        <p>Since 2007, I have served as a software engineer for many companies, where I have been repeatedly recognized for developing innovative solutions for multimillion-dollar, globally deployed software and systems. I am responsible for full lifecycle development of next-generation software, from initial requirement
+            gathering to design, coding, testing, documentation and implementation</p>
+    </div><!--/.secondary-->
 
-<div class="primary col">
-    <h3>Visit my resume page here </h3>
-    <a href="https://mmrp5.github.io/MadhanMohan">Resume</a>
-    </p>
-</div><!--/.primary-->
 
-<div class="tertiary col">
-    <h3>My other contributions to github</h3>
 
-</div><!--/.tertiary-->
+    <div class="primary col online">
+        <h3>Online Classes I teach </h3>
+        <ul>
+            <li>-   <a href="https://mmrp5.github.io/WebDevCourse">Web Development</a></li>
+            <br>
+            <li>-   <a href="#">.Net Programming Basics</a> (coming soon)</li>
+        </ul>
+        </p>
+    </div><!--/.primary-->
+
+    <div class="primary col online">
+        <h3>Other applications I am working on </h3>
+        <ul>
+            <li>- <a href="https://mmrp5.github.io/ArtClass1.0" target="_blank">Webpage for art classes</a></li>
+            <br>
+
+        </ul>
+        </p>
+    </div><!--/.primary-->
+
+
+    <div class="tertiary col online">
+
+        <h3>My other contributions to github</h3>
+        <ul>
+            <li>- <a href="https://github.com/mmrp5" target="_blank">My github page</a></li>
+            <br>
+            <li>- <a href="https://github.com/mmrp5" target="_blank">More to follow</a></li>
+        </ul>
+
+
+    </div><!--/.tertiary-->
 
 </div>
 
