--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
     <h1 class="name"><a href="#">Madhan Mohan</a></h1>
     <ul class="main-nav">
         <li><a href="#">About</a></li>
-        <li><a href="#">Education</a></li>
-        <li><a href="#">Skills</a></li>
-        <li><a href="#">Experience</a></li>
+
+        <li><a href="https://mmrp5.github.io/MadhanMohan">Resume</a></li>
         <li><a href="#">Contact</a></li>
     </ul>
     </div>
