added teaching description

--- a/index.html
+++ b/index.html
@@ -40,7 +40,12 @@
 
 
     <div class="primary col online">
-        <h3>Online Classes I teach </h3>
+        <h3>Online teaching </h3>
+        <p> Teaching is my passion. Started teaching some of my favorite web technologies like
+            HTML5, CSS3, JavaScript and AngularJS. The course is completely free.
+            You can send me a request <a style="color:dodgerblue" href="mailto:ipaidimarla@outlook.com" >here</a> for the next session, if you are
+            interested to take up the course.
+        </p>
         <ul>
             <li>-   <a href="https://mmrp5.github.io/WebDevCourse">Web Development</a></li>
             <br>
