--- a/index.html
+++ b/index.html
@@ -43,12 +43,16 @@
         <h3>Online teaching </h3>
         <p> Teaching is my passion. Started teaching some of my favorite web technologies like
             HTML5, CSS3, JavaScript and AngularJS. The course is completely free.
-            You can send me a request <a style="color:dodgerblue" href="mailto:ipaidimarla@outlook.com" >here</a> for the next session, if you are
+            You can send me an email request <a style="color:dodgerblue" href="mailto:ipaidimarla@outlook.com" >here</a> for the next session, if you are
             interested to take up the course.
         </p>
         <ul>
-            <li>-   <a href="https://mmrp5.github.io/WebDevCourse">Web Development</a></li>
-            <br>
+            <li>-   <a>Web Development</a></li>
+            <p style="margin-left:60px">
+                Click  <a style="color:dodgerblue; "  href="https://mmrp5.github.io/WebDevCourse" target="_blank">here</a>
+                to check the course content and the progressing session info.
+            </p>
+
             <li>-   <a href="#">.Net Programming Basics</a> (coming soon)</li>
         </ul>
         </p>
@@ -57,8 +61,7 @@
     <div class="primary col online">
         <h3>Other applications I am working on </h3>
         <ul>
-            <li>- <a href="https://mmrp5.github.io/ArtClass1.0" target="_blank">Webpage for art classes</a></li>
-            <br>
+            <li>- <a href="https://mmrp5.github.io/ArtClass1.0" target="_blank" style="color:dodgerblue; ">Webpage for art classes</a></li>
 
         </ul>
         </p>
@@ -67,11 +70,11 @@
 
     <div class="tertiary col online">
 
-        <h3>My other contributions to github</h3>
+        <h3>Contributions to github</h3>
         <ul>
-            <li>- <a href="https://github.com/mmrp5" target="_blank">My github page</a></li>
-            <br>
-            <li>- <a href="https://github.com/mmrp5" target="_blank">More to follow</a></li>
+            <li>- <a href="https://github.com/mmrp5" target="_blank" style="color:dodgerblue; ">Github Repos</a></li>
+
+
         </ul>
 
 
