--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <img class="logo" src="img/MadhanMohan.jpg" alt="Author Image">
 
     <h1 class="headline">Welcome To My Page</h1>
-    <span class="tagline">Hands on experience in Microsoft .Net &amp; Web development technologies.</span>
+    <span class="tagline">Passionate, creative and results oriented Engineering leader</span>
 </div><!--/.banner-->
 <div class="container clearfix">
     <div class="secondary col">
