--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Madhan Mohan, Full Stack Developer</title>
+    <title>Madhan Mohan, Senior Software Developer</title>
     <link href='https://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/png" href="img/fav5.png">
 </head>
 <body>
 
