--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1 class="name"><a href="#">Madhan Mohan</a></h1>
         <ul class="main-nav">
             <li><a href="#">Home</a></li>
-            <li><a href="https://mmrp5.github.io/MadhanMohan">Resume</a></li>
+            <li><a href="https://mmrp5.github.io/MadhanMohan" target="_blank">Profile</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
     </div>
@@ -29,11 +29,10 @@
 </div><!--/.banner-->
 <div class="container clearfix">
     <div class="secondary col">
-        <h3>Welcome!</h3>
-        <p>Thank you for visiting my page.</p>
+        <p>Thank you for visiting my page!</p>
 
         <p>Since 2007, I have served as a software engineer for many companies, where I have been repeatedly recognized for developing innovative solutions for multimillion-dollar, globally deployed software and systems. I am responsible for full lifecycle development of next-generation software, from initial requirement
-            gathering to design, coding, testing, documentation and implementation</p>
+            gathering to design, coding, testing, documentation, and implementation.</p>
     </div><!--/.secondary-->
 
 
@@ -41,15 +40,15 @@
     <div class="primary col online">
         <h3>Online teaching </h3>
         <p> Teaching is my passion. Started teaching some of my favorite web technologies like
-            HTML5, CSS3, JavaScript and AngularJS. The course is completely free.
+            HTML5, CSS3, JavaScript and AngularJS.
             You can send me an email request <a style="color:dodgerblue" href="mailto:ipaidimarla@outlook.com" >here</a> for the next session, if you are
             interested to take up the course.
         </p>
         <ul>
             <li>-   <a>Web Development</a></li>
-            <p style="margin-left:60px">
+            <p style="margin-left:68px">
                 Click  <a style="color:dodgerblue; "  href="https://mmrp5.github.io/WebDevCourse" target="_blank">here</a>
-                to check the course content and the progressing session info.
+                to check the course content and progressing session info.
             </p>
 
             <li>-   <a href="#">.Net Programming Basics</a> (coming soon)</li>
