--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container clearfix">
         <h1 class="name"><a href="#">Madhan Mohan</a></h1>
         <ul class="main-nav">
-            <li><a href="#">Home</a></li>
+            <li class="active-tab"><a href="#">Home</a></li>
             <li><a href="https://mmrp5.github.io/MadhanMohan" target="_blank">Profile</a></li>
 
         </ul>
