--- a/index.html
+++ b/index.html
@@ -72,7 +72,6 @@
         <ul>
             <li>- <a href="https://github.com/mmrp5" target="_blank" style="color:dodgerblue; ">Github Repos</a></li>
 
-
         </ul>
 
 
@@ -82,7 +81,7 @@
 
 
 <footer class="main-footer">
-    <span>&copy;2017, All Rights Reserved for Madhan Mohan,  San Jose.</span>
+    <span>&copy;2017, All Rights Reserved for Madhan Mohan</span>
 </footer>
 
 </body>
